# rockto-haskell

./: .gitignore  .stylish-haskell.yaml  Dockerfile  LICENSE  Makefile  README.md  rockto.cabal  stack.yaml
app/: Main.hs  UI.hs
resources/: round_01.txt  round_02.txt  round_03.txt  round_04.txt  round_05.txt
src/: Rockto.hs
src/Rockto/: Config.hs  FileIO.hs  Movement.hs  Resource.hs  Tick.hs  Types.hs  Utils.hs
test/: Main.hs  TestResource.hs  TestTick.hs  TestUtils.hs
