name:                   rockto
version:                0.1.0.0
synopsis:               A remake of retro chip-8 game rockto in terminal with Brick
homepage:               https://github.com/ssine/rockto-haskell
license:                MIT
license-file:           LICENSE
author:                 DSSZ Haskell Group, UCSD (dofup, shijiesun-edu, ssine, ZJHCSE)
maintainer:
category:               Game
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
    exposed-modules:    Rockto
                      , Rockto.Resource
                      , Rockto.Types
                      , Rockto.Utils
                      , Rockto.Config
                      , Rockto.Tick
    build-depends:      base >=4.14
                      , brick >= 0.65
                      , containers
                      , random
                      , vty
    hs-source-dirs:     src
    default-language:   Haskell2010

executable rockto
    hs-source-dirs:     app
    main-is:            Main.hs
    other-modules:      UI
    ghc-options:        -threaded -static -O2 -optl-fuse-ld=bfd
    cc-options:         -static
    ld-options:         -static -pthread
    build-depends:      base
                      , brick
                      , containers
                      , rockto
                      , microlens-platform
                      , random
                      , vty
    default-language:   Haskell2010
